# decpkg

./: README.md  config.jsonc  decpkg.py  pyproject.toml  test.py
