[project]
name = "decpkg"
version = "0.1.0"
description = """
  this project was created for declarative interaction with packages 
  this project uses 
  utelites such as toml yaml 
  paru, yay pacman 
  popular package managers for archlinux 
  this project is strictly for archlinux users. 
"""
authors = [
    {name = "maaru", email = "maratarzymatov288@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "python-yaml",
    "python-toml",
    "requests",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
